# cornell-ai-hack

./: .gitignore  CLAUDE.md  README.md  railway.toml
.claude/: settings.json
backend/: .env.example  CLAUDE.md  Dockerfile  main.py  pyproject.toml  railway.json  test_browserbase.py
backend/payloads/: payloads.json
backend/scanner/: attack_runner.py  chat_interactor.py  generic_chat.py  generic_chat_interactor.py  generic_widget_finder.py  prechat_handler.py  response_analyzer.py  scoring.py  stagehand_scanner.py  vision_navigator.py  widget_detector.py
backend/tests/: test_attack_runner.py  test_chat_interactor.py  test_response_analyzer.py  test_scoring.py  test_widget_detector.py
demo-app/: README.md  app.py  requirements.txt
demo-app/api/: index.py
demo-app/public/: index.html
demo-app/templates/: index.html
docs/: changelog.md  multi-step-attacks.md  pitch-deck.md
docs/superpowers/plans/: 2026-03-14-ai-chatbot-vulnerability-scanner.md  2026-03-14-browserbase-integration.md  2026-03-14-robust-input-detection.md  2026-03-14-stagehand-migration.md  (+9 more)
eval/: .gitignore  generate_report.py  package-lock.json  package.json  promptfooconfig.yaml  provider.py  redteam.yaml  summarize.py
eval/output/: judge-eval-report.md
frontend/: CLAUDE.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: AttackDetail.tsx  BrowserLiveView.tsx  CategoryCard.tsx  Footer.tsx  GradeBadge.tsx  ScanInput.tsx  ScanProgress.tsx  ScanningView.tsx  VulnerabilityReport.tsx
frontend/lib/: types.ts  useWebSocket.ts
research/: market-research.md
(+4 files in other folders)
